# skeen

./: .env.example  .env.test  .gitignore  .prettierignore  AGENTS.md  FIREBASE_SETUP.md  README.md  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
.gemini/: settings.json
.github/workflows/: build.yml  deploy.yml  test.yml
src/: app.css
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  oauth.rs  permissions.rs
src/lib/: firebase.ts  image.ts  index.ts  permissions.ts  platform.ts
src/lib/__tests__/: image.test.ts  platform.test.ts  utils.test.ts
src/lib/ai/: base.ts  firebase.ts  gemini.ts  index.ts
src/lib/db/: firestore-history.ts  firestore-products.ts  firestore-profile.ts  history.ts  products.ts
src/lib/states/: ai-client.ts
src/lib/stores/: auth.svelte.ts  history.svelte.ts  products.svelte.ts  profile.svelte.ts
src/lib/types/: profile.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/companion/: +page.svelte
src/routes/comparison/: +page.svelte
src/routes/history/: +page.svelte
static/: oauth-callback.html  splashscreen.html
tests/e2e/: assessment.spec.ts  comparison.spec.ts  history.spec.ts  products.spec.ts  profile.spec.ts
tests/fixtures/: assessments.ts  products.ts  profiles.ts
tests/mocks/: ai-client.ts  app-navigation.ts  app-paths.ts  env-public.ts  firebase.ts  tauri.ts
(+28 files in other folders)
