[package]
name = "skeen"
version = "1.0.0"
description = "Skincare product assessment tool powered by AI"
authors = ["Skeen Team"]
license = "MIT"
repository = "https://github.com/yourusername/skeen"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skeen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2.4.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tiny_http = "0.12.0"
